# Snake

./: .gitignore  CMakeLists.txt  Direction.hpp  Position.cpp  Position.hpp  Snake.hpp  main.cpp
Snake/: Snake.cpp  Snake.hpp
